--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author :
 #
 production_url : http://username.github.io
 
-gems: ["jekyll-sitemap"]
+gems: ["jekyll-sitemap","jekyll-admin"]
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
